# spytter

./: Cargo.toml  README.md
site/: 404.html  index.html
site/pages/: forus.html
src/: api.rs  main.rs
static/: 404.html  index.html  style.css
